WB-266: added emails as settings and removed email env variables